3 files modified, 4 added

--- a/src/app/mycomp2/mycomp2.component.html
+++ b/src/app/mycomp2/mycomp2.component.html
@@ -4,3 +4,8 @@
 
 <p (click)="prev()">go previous</p>
 <p (click)="goback()">go back</p>
+
+<a (click)="child1()">click here to display child1</a>
+<br />
+<a (click)="child2()">click here to display child2</a>
+<router-outlet></router-outlet>
